--- a/specs.html
+++ b/specs.html
@@ -28,14 +28,27 @@
     </nav>	
     </header>
 
-Glass > Especificações
-Raio-X no Google Glass
-por Gustavo Guanabara
-Atualizado em 01/Maio/2013
+<section id="corpo-full">
+<header>
+    <article id="noticia-principal">
+        <header id="cabecalho-artigo">
+            <hgroup>
+                <h3>Glass > Especificações</h3>
+                <h1>Raio-X no Google Glass</h1>
+                <h2>por Gustavo Guanabara</h2>
+                <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+            </hgroup>
+        </header>
+    
+<p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
+        <section id="conteudo">
+            <img src="_imagens/glass-esquema-marcado.jpg">
+            <iframe src="google-glass.html"></iframe>
+        </section>
 
-[AQUI ENTRA UMA IMAGEM]
+    </article>
+</section>
 
     <footer id="rodape">
       <p>Copyright 2013 - by Gustavo Guanabara <br/>
