--- a/specs.html
+++ b/specs.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8"/>
         <title>Tudo sobre Google Glass</title>
         <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
+        <link rel="stylesheet" href="_css/specs.css"/>
     </head>
     <script language="javascript" src="_javascript/funcoes.js"></script>
     <body>
@@ -44,7 +45,7 @@
 
         <section id="conteudo">
             <img src="_imagens/glass-esquema-marcado.jpg">
-            <iframe src="google-glass.html"></iframe>
+            <iframe src="google-glass.html" name="janela" id="frame-spec"></iframe>
         </section>
 
     </article>
